examples/error/assignment_to_function.rx
function void main() {
  print = "str"; 
}